still trying to fix overflow on mobile

--- a/src/Styles/Landingpage.css
+++ b/src/Styles/Landingpage.css
@@ -8,7 +8,7 @@
 body, html {
   font-family: "Poppins" , sans-serif;
   color: blueviolet;
-  min-width: 100%;
+  width: 100%;
   overflow-x: hidden;
 }
 
