--- a/src/Styles/_config.scss
+++ b/src/Styles/_config.scss
@@ -7,7 +7,7 @@ $color-pr: rgb(252, 252, 252);
 body, html{
    font-family: "Poppins" , sans-serif; 
    color: blueviolet;
-  min-width: 100%;
+   width: 100%;
    overflow-x: hidden;
 
 }
